# threads_in_C

./: CMakeLists.txt  README.md
src/: experimenting_with_atomics.c  practicing_threads.c  race_condition_example.c
